--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>안녕하세요</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>정보 통신 금융 범죄 예방법 퀴즈</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1> 안녕 !!</h1>
-  
+    <div id="quiz-container">
+        <h1>정보 통신 금융 범죄 예방법 퀴즈</h1>
+        <div id="question-container"></div>
+        <div id="choices-container"></div>
+        <button id="next-button" onclick="nextQuestion()">다음</button>
+    </div>
+    <div id="result-container" style="display: none;">
+        <h2>당신의 점수: <span id="score"></span></h2>
+        <p id="result-message"></p>
+        <button onclick="restartQuiz()">다시 시작</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
