--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>정보 통신 금융 범죄 예방법 퀴즈</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+      .center{
+        text-align: center;
+      }
+      
+    </style>
 </head>
 <body>
     <div id="quiz-container">
-        <h1>정보 통신 금융 범죄 예방법 퀴즈</h1>
+        <h1>정보 통신 금융 범죄<br>
+          예방 퀴즈</h1>
         <div id="question-container"></div>
         <div id="choices-container"></div>
         <button id="next-button" onclick="nextQuestion()">다음</button>
@@ -18,6 +25,13 @@
         <p id="result-message"></p>
         <button onclick="restartQuiz()">다시 시작</button>
     </div>
+    <a href="/study.html"><button class="button">
+학습하러 가기      <svg fill="currentColor" viewBox="0 0 24 24" class="icon">
+        <path clip-rule="evenodd" d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zm4.28 10.28a.75.75 0 000-1.06l-3-3a.75.75 0 10-1.06 1.06l1.72 1.72H8.25a.75.75 0 000 1.5h5.69l-1.72 1.72a.75.75 0 101.06 1.06l3-3z" fill-rule="evenodd"></path>
+      </svg>
+    </button></a>
+    <br>
+    <br>
     <script src="script.js"></script>
 </body>
 </html>
